--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark">#777D8C</color>
+    <color name="marvel_red">#ed1d24</color>
+    <color name="progress_bar_bg">#66000000</color>
 </resources>
