Detail Character View Room persistance (Saving objects in list and retrieve object in detail) Error from WS retrieved in detail and showing it in Snackbar (ApiErrorResponse) Refactor code

--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -41,6 +41,16 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageView
+                android:id="@+id/iv_do_search"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:scaleType="center"
+                android:src="@drawable/outline_search_24"
+                android:visibility="gone"
+                app:tint="@color/white"></ImageView>
+
+            <ImageView
                 android:id="@+id/iv_clear_search"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
